gccida/g0/distribute_bit_expr
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/fold-const.c:3410:28: error: must use 'enum' tag to refer to type 'tree_code'
tree  distribute_bit_expr( tree_code code, tree type, tree arg0, tree arg1) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/fold-const.c:3412:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/fold-const.c:3414:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/fold-const.c:3446:15: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v7 = build( ( tree_code)*( ( unsigned __int8 *)&arg0->block.common + 16), type, common, v6); 
              ^~~~~~~~~
              tree_cons
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/fold-const.c:3446:25: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
v7 = build( ( tree_code)*( ( unsigned __int8 *)&arg0->block.common + 16), type, common, v6); 
            ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/distribute_bit_expr/src/obj/fold-const.o] Error 1
